--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Build the app
         run: cd frontend && npm run build
+        env:
+         CI: ""
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.4.2
