--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -23,11 +23,12 @@ jobs:
 
       - name: Install dependencies
         run: cd frontend && npm ci
-
+        env:
+          CI: ""
       - name: Build the app
         run: cd frontend && npm run build
         env:
-         CI: ""
+          CI: ""
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.4.2
