--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.10.15",
     "@mui/x-date-pickers": "^6.12.1",
-    "@nivo/calendar": "^0.83.0",
-    "@nivo/core": "^0.83.0",
-    "@nivo/tooltip": "^0.83.0",
+    "@nivo/calendar": "^0.84.0",
+    "@nivo/core": "^0.84.0",
+    "@nivo/heatmap": "^0.84.0",
+    "@nivo/tooltip": "^0.84.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
