--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -22,12 +22,12 @@ jobs:
           node-version: 16.x
 
       - name: Install dependencies
-        run: cd frontend && npm ci
+        run: npm ci
         env:
           CI: ""
           
       - name: Build the app
-        run: cd frontend && npm run build
+        run: npm run build
         env:
           CI: ""
 
@@ -35,4 +35,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.4.2
         with:
           branch: gh-pages
-          folder: ./frontend/build
+          folder: ./build
